welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:5: error: value droite is not a member of Unit
def growFlowers(){jardiniere();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE);avance();avance();avance();avance();fleur(Color.BLUE);avance();avance();avance();avance();fleur(Color.ORANGE);recule();gauche();avance();avance();droite();recule();jardiniere();gauche();avance();droite();recule();recule();recule();recule();recule();recule();recule();recule()droite();avance();avance();avance();avance();avance();gauche()} 
                                                                                                                                                                                                                                                                                                                                                                                            ^